<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.w.k.multiplicationapp.multiplier">

    <Button
        android:id="@+id/New"
        android:layout_width="118dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:onClick="generateFactors"
        android:text="@string/newButtonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

    <TextView
        android:id="@+id/product1"
        android:gravity="right"
        android:layout_width="128dp"
        android:layout_height="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"
        app:layout_constraintRight_toLeftOf="@+id/sign1"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/product2"
        android:gravity="left"
        android:layout_width="128dp"
        android:layout_height="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="136dp"
        app:layout_constraintLeft_toRightOf="@+id/sign1"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp" />

    <Button
        android:id="@+id/Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:onClick="checkAnswer"
        android:text="@string/checkButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num0" />

    <TextView
        android:id="@+id/sign1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/multiplySymbolText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Infodisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/blank_chrono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/New" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width= "0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8191396618832744/5270487029"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        ads:layout_constraintTop_toTopOf="parent">
    </com.google.android.gms.ads.AdView>

    <EditText
        android:id="@+id/answerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/answerHintText"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Infodisplay" />

    <Button
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="8dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="1"
        android:text="@string/textpadOne"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBox" />

    <Button
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="2"
        android:text="@string/textPadTwo"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBox" />

    <Button
        android:id="@+id/num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginTop="8dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="3"
        android:text="@string/textPadThree"
        ads:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerBox" />

    <Button
        android:id="@+id/num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="4"
        android:text="@string/textPadFour"
        ads:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <Button
        android:id="@+id/num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="5"
        android:text="@string/textPadFive"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />

    <Button
        android:id="@+id/num6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="6"
        android:text="@string/textPadSix"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num3" />

    <Button
        android:id="@+id/num7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="7"
        android:text="@string/textPadSeven"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num4" />

    <Button
        android:id="@+id/num8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="8"
        android:text="@string/textPadEight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num5" />

    <Button
        android:id="@+id/num9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="58dp"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="9"
        android:text="@string/textPadNine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num6" />

    <Button
        android:id="@+id/num0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="-79dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="0"
        android:text="@string/textPadZero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num7" />

    <Button
        android:id="@+id/numBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="92dp"
        android:layout_marginTop="0dp"
        android:background="#203f70"
        android:onClick="numberButton"
        android:tag="Back"
        android:text="@string/textPadDelete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num9" />

</android.support.constraint.ConstraintLayout>
